--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+        <h2>X's Turn</h2>
+        <section id="gameboard">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </section>
+        <button>Reset</button>
+        <footer>
+            <p>Copyright &copy; All Rights Reserved Tic Tac Toe 2021</p>
+        </footer>
+    </main>
 </body>
 </html>
